[package]
name = "puzzle15"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = { version="0.3", features=["env-filter"] }
num = "0"
petgraph = "0"
staticvec = "0"
fnv = "1"

# [target.'cfg(not(target_env = "msvc"))'.dependencies]
# tikv-jemallocator = "0.5"
# tikv-jemallocator = { version="0.5", features = ["profiling"] }

[profile.release-lto]
inherits = "release"
lto = "fat"
codegen-units = 1
